SimplePie/test/date/SPtests/RFC2822/valid/1.php
<?php

class SimplePie_Date_Test_RFC2822_1 extends SimplePie_Date_Test
{
	function data()
	{
		$this->data = 'Fri, 05 Nov 94 13:15:30 GMT';
	}
	
	function expected()
	{
		$this->expected = 784041330;
	}
}

?>